Revision history for Hypothesis-API

0.10    ??
        Changed null 'target' format so created annotations show in plugin.

0.09    2015-06-26
	Added 'update_id' function so annotations can be updated.
	Minor doc change for search to include 'uri.parts'.
	Slightly improved build procedure regarding META packaging.

0.08    2015-06-20
        Removed MYMETA.* from distribution.
	Removed unnecessary 'use Term::ReadKey' in search.t.

0.07    2015-06-19
        Now properly include LWP::Protocol::https as a dependency.

0.06    2015-06-18
        Fixed metadata to now include META as well as MYMETA.

0.05    2015-06-18
        Updating read_id and corresponding tests to reflect 
        server-side change in hypothes.is: /api/annotations/
        with no parameters now appears identical to
        /api/search with no parameters.

0.04    2015-06-18
        Updated documentation and metadata.

0.01    2015-06-17
        First release; supports:
        * create
        * delete
        * login
        * read
        * search